[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tping"
version = "1.0.0"
description = "EchoRequest and EchoReply Module"
dependencies = [
    "tchecksum @ git+https://github.com/tango3304/tchecksum.git",
]

[tool.hatch.metadata]
allow-direct-references = true
