[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tping"
version = "1.0.3"
description = "EchoRequest and EchoReply Module"
requires-python = ">=2.0"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "tchecksum @ git+https://github.com/tango3304/tchecksum.git",
]

[tool.hatch.metadata]
allow-direct-references = true
